--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 #Site configuration
 title: Read
 name:  Maria Pettyjohn
-author: Anthony Stark
-work:  Developer
-year: 2018
+author: Maria Pettyjohn
+work:  Master's Student
+year: 2020
 
 # Navigation
 nav1: "About"
