--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ nav5: "Contact Me"
 # Section1
 sec1: "Maria Pettyjohn"
 sec2: "Master's Student - Unversity of Alberta"
-sec3: "I am a Master's student at the University of Alberta, specialising in astrophysics. I work with Professor Erik Rosolowsky studying the clouds in space that form stars and planets. My research focuses on the determining how the abundances of prebiotic molecules change with local enivronment of the cloud."
+sec3: "I am a Master's student at the University of Alberta, specialising in astrophysics. I work with <li><a href="{{https://apps.ualberta.ca/directory/person/erosolow}}">{{Erik Rosolowsky}}</a></li> studying the clouds in space that form stars and planets. My research focuses on the determining how the abundances of prebiotic molecules change with local enivronment of the cloud."
 
 # Section 2
 sec4: "Education"
